# flux-runtime-deu

./: CHARTER.md  DOCKSIDE-EXAM.md  README.md  pyproject.toml
docs/: design.md
examples/: Rechnen.flux
for-fleet/: health-check-2026-04-12_171941.json
src/flux_deu/: __init__.py  bridge_adapter.py  cli.py  encoder.py  interpreter.py  kasus.py  kasus_capability.py  trennverben.py  vm.py
src/flux_deu/vocabulary/: __init__.py  a2a.ese  maritime.ese  math.ese
src/flux_runtime_deu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_interpreter_deu.py  test_vm.py
