[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-runtime-deu"
version = "0.1.0"
description = "FLUX — Fluide Sprache Universelle Ausführung. Deutsch-zuerst NL-Laufzeitumgebung mit Kasus-basierter Zugriffssteuerung."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["nlp", "german", "flux", "runtime", "kasus", "verb-position"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: German",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
flux-deu = "flux_deu.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
